--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "moment-timezone": "^0.5.31",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
